src/modules/10-common/components/DelegateSelectionLogs/DelegateSelectionLogs.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.main {
  max-height: calc(100vh - 200px);
  overflow: scroll;
}

.card {
  &:global(.bp3-card.bp3-elevation-0) {
    margin-top: var(--spacing-small) !important;
  }
  .delegateName {
    flex-shrink: 1 !important;
  }
}

